--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "alvinyuen.github.io",
   "version": "1.0.0",
-  "description": "portfolio site",
+  "description": "Personal Website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,5 +18,17 @@
   "bugs": {
     "url": "https://github.com/alvinyuen/alvinyuen.github.io/issues"
   },
-  "homepage": "https://github.com/alvinyuen/alvinyuen.github.io#readme"
+  "homepage": "https://github.com/alvinyuen/alvinyuen.github.io#readme",
+  "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^3.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.16.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0"
+  }
 }
